--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,9 @@
 :root {
   --main-color: #004225;
   --main-color-text: rgba(255, 255, 255, 0.8);
+  --footer-color: rgb(0, 66, 37, 0.8);
+  --menu-color: #004225;
+  --copyright-color: rgb(0, 66, 37);
 }
 @-ms-viewport {
   width: device-width; }
@@ -1805,7 +1808,7 @@ ul.icons {
 #banner {
   -ms-flex-align: center;
   -ms-flex-pack: center;
-  background-color: #111111;
+  background-color: var(--menu-color);
   color: var(--main-color-text);
   -moz-align-items: center;
   -webkit-align-items: center;
@@ -1914,7 +1917,7 @@ ul.icons {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(255, 255, 255, 0.25)' /%3E%3C/svg%3E"); }
     #banner select option {
       color: var(--main-color-text);
-      background-color: #111111; }
+      background-color: var(--menu-color); }
   #banner input[type="checkbox"] + label,
   #banner input[type="radio"] + label {
     color: var(--main-color-text); }
@@ -1954,10 +1957,10 @@ ul.icons {
   #banner table.alt tbody tr td {
     border-color: rgba(255, 255, 255, 0.25); }
   #banner .highlights .content {
-    background: #111111;
+    background: var(--menu-color);
     box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
   #banner .testimonials .content {
-    background: #111111;
+    background: var(--menu-color);
     box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
     #banner .testimonials .content .credit strong {
       color: var(--main-color); }
@@ -2007,7 +2010,7 @@ ul.icons {
     -webkit-transition-delay: 1.25s;
     -ms-transition-delay: 1.25s;
     transition-delay: 1.25s;
-    background: #111111;
+    background: var(--menu-color);
     content: '';
     display: block;
     height: 100%;
@@ -2215,9 +2218,9 @@ ul.icons {
 .copyright {
   border-top: 1px solid;
   font-size: 0.8rem;
-  padding: 2rem 0;
+  padding: 0.8rem 0;
   text-align: center;
-  background-color: #111111;
+  background-color: var(--copyright-color);
   color: var(--main-color-text);
   text-decoration: none;
 }
@@ -2226,7 +2229,7 @@ ul.icons {
 }
 /* Footer */
 #footer {
-  background-color: #111111;
+  background-color: var(--footer-color);
   color: var(--main-color-text);
   padding: 8rem 0 6rem 0 ; }
   #footer input, #footer select, #footer textarea {
@@ -2312,7 +2315,7 @@ ul.icons {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(255, 255, 255, 0.25)' /%3E%3C/svg%3E"); }
     #footer select option {
       color: var(--main-color-text);
-      background-color: #111111; }
+      background-color: var(--footer-color); }
   #footer input[type="checkbox"] + label,
   #footer input[type="radio"] + label {
     color: var(--main-color-text); }
@@ -2352,10 +2355,10 @@ ul.icons {
   #footer table.alt tbody tr td {
     border-color: rgba(255, 255, 255, 0.25); }
   #footer .highlights .content {
-    background: #111111;
+    background: var(--footer-color);
     box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
   #footer .testimonials .content {
-    background: #111111;
+    background: var(--footer-color);
     box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
     #footer .testimonials .content .credit strong {
       color: var(--main-color); }
@@ -2438,7 +2441,7 @@ body {
   -webkit-justify-content: space-between;
   -ms-justify-content: space-between;
   justify-content: space-between;
-  background: #111111;
+  background: var(--menu-color);
   color: var(--main-color-text);
   cursor: default;
   height: 3.25rem;
@@ -2505,7 +2508,7 @@ body {
 #heading {
   -ms-flex-align: center;
   -ms-flex-pack: center;
-  background-color: #111111;
+  background-color: var(--menu-color);
   color: var(--main-color-text);
   -moz-align-items: center;
   -webkit-align-items: center;
@@ -2614,7 +2617,7 @@ body {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(255, 255, 255, 0.25)' /%3E%3C/svg%3E"); }
     #heading select option {
       color: var(--main-color-text);
-      background-color: #111111; }
+      background-color: var(--menu-color); }
   #heading input[type="checkbox"] + label,
   #heading input[type="radio"] + label {
     color: var(--main-color-text); }
@@ -2654,15 +2657,15 @@ body {
   #heading table.alt tbody tr td {
     border-color: rgba(255, 255, 255, 0.25); }
   #heading .highlights .content {
-    background: #111111;
+    background: var(--menu-color);
     box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
   #heading .testimonials .content {
-    background: #111111;
+    background: var(--menu-color);
     box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
     #heading .testimonials .content .credit strong {
       color: var(--main-color); }
   #heading:before {
-    background: linear-gradient(135deg, var(--main-color) 0%, #111111 74%);
+    background: linear-gradient(135deg, var(--main-color) 0%, var(--menu-color) 74%);
     content: ' ';
     display: block;
     height: 100%;
@@ -2696,7 +2699,7 @@ body {
 
 /* Menu */
 #menu {
-  background-color: #111111;
+  background-color: var(--menu-color);
   color: var(--main-color-text);
   -moz-transform: translateX(20rem);
   -webkit-transform: translateX(20rem);
