--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ body {
   html, body {
     min-width: 320px; } }
 html {
+  scroll-behavior: smooth;
   box-sizing: border-box; }
 
 *, *:before, *:after {
@@ -67,6 +68,10 @@ footer, header, hgroup, menu, nav, section {
 
 body {
   line-height: 1; }
+
+section {
+  scroll-margin-top: 44px;
+}
 
 ol, ul {
   list-style: none; }
@@ -1762,7 +1767,9 @@ ul.icons {
   display: inline-block;
   position: relative; }
   .image img {
-    border-radius: 4px;
+    max-width: 300px;
+    height: auto;
+    border-radius: 8px;
     display: block; }
   .image.left, .image.right {
     max-width: 40%; }
