--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,9 @@ body {
     min-width: 320px; } }
 html {
   scroll-behavior: smooth;
-  box-sizing: border-box; }
+  box-sizing: border-box; 
+  font-display: swap;
+}
 
 *, *:before, *:after {
   box-sizing: inherit; }
